hw2 completed